2005-12-30  DindinX  <dindinx@gimp.org>

	* plug-ins/common/depthmerge.c: fixed some compiler warnings and did
	some cleanups.

2005-12-30  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainerentry.c (gimp_container_entry_init):
	set "inline-completion" and unset "popup-set-width" properties.

2005-12-30  Sven Neumann  <sven@gimp.org>

	* app/actions/image-actions.c
	* app/actions/view-actions.c
	* app/dialogs/image-properties-dialog.c: use new stock icons from
	GTK+ 2.8.

2005-12-30  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpdockable.[ch]: #define GIMP_DOCKABLE_DRAG_OFFSET
	publically.

	* app/widgets/gimpdockbook.c (gimp_dockbook_tab_drag_end): use the
	define to reset the dockable's drag offsets.

2005-12-30  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/preferences-dialog.c
	(prefs_tree_select_callback)
	(prefs_notebook_page_callback): clean up treeview/model code.

2005-12-30  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpgradienteditor.c (view_events): typo.

2005-12-29  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_new):
	commented out gravity setting. While it's nice with
	"resize-windows-on-zoom" it doesn't yield satisfying behaviour in
	most cases.

2005-12-29  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdockbook.c (gimp_dockbook_dockable_added): set
	the current notebook page to the dockable that was just added.

2005-12-29  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdialogfactory.c (gimp_dialog_factories_show_foreach):
	fiddle with the "focus-on-map" window hint to prevent the dialogs
	from grabbing the focus away from the image window. Fixes bug #167762
	for window managers supporting this hint.

	* app/display/gimpdisplayshell-callbacks.c: removed redundant call
	to gdk_window_focus() that wasn't having the desired effect anyway.

2005-12-29  Simon Budig  <simon@gimp.org>

	* tools/pdbgen/pdb/image.pdb: new function: 
	    image_add_vectors
